# lupinas-lullaby

./: .gitignore  .gitlab-ci.yml  .nvmrc  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml  tests.yml
data/v3.1/: webhook-example.json
npm/: binary.js
src/: main.rs
src/openapi/: lib.rs  mod.rs
src/openapi/repr/: mod.rs
src/openapi/spec2/: mod.rs  parse.rs  spec.rs
src/openapi/spec3/: mod.rs  parse.rs  parse_client.rs  parse_type.rs  spec.rs  types.rs
src/openapi/src/spec2/: parse.rs
src/openapi/src/spec3/: parse.rs
