[package]
name = "lupinas-lullaby"
version = "0.1.8"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
description = "Automatically generate TypeScript interfaces from a Swagger 2.0 spec."
repository = "https://github.com/hbina/lupinas-lullaby"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["src/**/*", "Cargo.toml"]

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = "0.8.15"

[profile.release]
lto = true
