[package]
name = "lupinas-lullaby"
version = "0.3.2"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
description = "Automatically generate TypeScript interfaces from a Swagger 2.0 spec."
repository = "https://github.com/hbina/lupinas-lullaby"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["src/**/*", "Cargo.toml"]

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"

[profile.release]
lto = true

[[bin]]
name = "lupinas-lullaby"

[lib]
name = "openapi"
path = "src/openapi/lib.rs"
